<resources>
    <string name="app_name">Periodico</string>
    <string name="element_H">Hydrogen</string>
    <string name="element_He">Helium</string>
    <string name="element_Li">Lithium</string>
    <string name="element_Be">Beryllium</string>
    <string name="element_B">Boron</string>
    <string name="element_C">Carbon</string>
    <string name="element_N">Nitrogen</string>
    <string name="element_O">Oxygen</string>
    <string name="element_F">Fluorine</string>
    <string name="element_Ne">Neon</string>
    <string name="element_Na">Sodium</string>
    <string name="element_Mg">Magnesium</string>
    <string name="element_Al">Aluminium</string>
    <string name="element_Si">Silicon</string>
    <string name="element_P">Phosphorus</string>
    <string name="element_S">Sulfur</string>
    <string name="element_Cl">Chlorine</string>
    <string name="element_Ar">Argon</string>
    <string name="element_K">Potassium</string>
    <string name="element_Ca">Calcium</string>
    <string name="element_Sc">Scandium</string>
    <string name="element_Ti">Titanium</string>
    <string name="element_V">Vanadium</string>
    <string name="element_Cr">Chromium</string>
    <string name="element_Mn">Manganese</string>
    <string name="element_Fe">Iron</string>
    <string name="element_Co">Cobalt</string>
    <string name="element_Ni">Nickel</string>
    <string name="element_Cu">Copper</string>
    <string name="element_Zn">Zinc</string>
    <string name="element_Ga">Gallium</string>
    <string name="element_Ge">Germanium</string>
    <string name="element_As">Arsenic</string>
    <string name="element_Se">Selenium</string>
    <string name="element_Br">Bromine</string>
    <string name="element_Kr">Krypton</string>
    <string name="element_Rb">Rubidium</string>
    <string name="element_Sr">Strontium</string>
    <string name="element_Y">Yttrium</string>
    <string name="element_Zr">Zirconium</string>
    <string name="element_Nb">Niobium</string>
    <string name="element_Mo">Molybdenum</string>
    <string name="element_Tc">Technetium</string>
    <string name="element_Ru">Ruthenium</string>
    <string name="element_Rh">rhodium</string>
    <string name="element_Pd">Palladium</string>
    <string name="element_Ag">Silver</string>
    <string name="element_Cd">Cadmium</string>
    <string name="element_In">Indium</string>
    <string name="element_Sn">Tin</string>
    <string name="element_Sb">Antimony</string>
    <string name="element_Te">Tellurium</string>
    <string name="element_I">Iodine</string>
    <string name="element_Xe">Xenon</string>
    <string name="element_Cs">Cesium</string>
    <string name="element_Ba">Barium</string>
    <string name="element_Hf">Hafnium</string>
    <string name="element_Ta">Tantalum</string>
    <string name="element_W">Tungsten</string>
    <string name="element_Re">Rhenium</string>
    <string name="element_Os">Osmium</string>
    <string name="element_Ir">Iridium</string>
    <string name="element_Pt">Platinum</string>
    <string name="element_Au">Gold</string>
    <string name="element_Hg">Mercury</string>
    <string name="element_Tl">Thallium</string>
    <string name="element_Pb">Lead</string>
    <string name="element_Bi">Bismuth</string>
    <string name="element_Po">Polonium</string>
    <string name="element_At">Astatine</string>
    <string name="element_Rn">Radon</string>
    <string name="element_Fr">Francium</string>
    <string name="element_Ra">Radium</string>
    <string name="element_Rf">Rutherfordium</string>
    <string name="element_Db">Dubnium</string>
    <string name="element_Sg">Seaborgium</string>
    <string name="element_Bh">Bohrium</string>
    <string name="element_Hs">Hassium</string>
    <string name="element_Mt">Meitnerium</string>
    <string name="element_Ds">Darmstadtium</string>
    <string name="element_Rg">Roentgenium</string>
    <string name="element_Cn">Copernicium</string>
    <string name="element_Nh">Nihonium</string>
    <string name="element_Fi">Flerovium</string>
    <string name="element_Mc">Moscovium</string>
    <string name="element_Lv">Livermorium</string>
    <string name="element_Ts">Tennessine</string>
    <string name="element_Og">Oganesson</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="game_over_string">Game Over</string>
    <string name="play_again_string">Play again?</string>
    <string name="exit_string">Exit</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="clear_all_string">clear all</string>
    <string name="clear_all_confirmation">Are you sure you want to clear board?</string>
    <string name="names_score_column_header">Name</string>
    <string name="score_score_coloumn_header">Score</string>
    <string name="clear_all_score_button">Clear All</string>
    <string name="quick_start_main_button">Quick Start</string>
    <string name="custom_game_main_button">Custom Game</string>
    <string name="leaderboard_main_button">Leaderboard</string>
    <string name="background_music_main_menu_title">Background Music</string>
    <string name="about_main_menu_title">About</string>
    <string name="select_a_level_to_begin_main_fragment_button">Select a level to begin</string>
    <string name="difficulty_selector">Select Difficulty</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="element_family_name_none">None</string>
    <string name="element_family_name_non_Metal">Non Metal</string>
    <string name="element_family_name_noble_gas">Noble Gases</string>
    <string name="element_family_name_alkali_metal">Alkali Metal</string>
    <string name="element_family_name_alkaline_earth">Alkaline Earth</string>
    <string name="element_family_name_semi_metal">Semi Metal</string>
    <string name="element_family_name_halogen_gas">Halogen Gases</string>
    <string name="element_family_name_basic_metal">Basic Metal</string>
    <string name="element_family_name_transition_metal">Transition Metal</string>
    <string name="winning_string_info">Well done, Level completed!</string>
    <string name="level_1_instructions">Place the elements in their positions</string>
    <string name="level_2_instructions">Pick the element Family Group</string>
    <string name="level_3_instructions">Match the element name to their symbol</string>
    <string name="time_left_message">"Time Left: "</string>
    <string name="instructions_main_menu_button">Instructions</string>
    <string name="points_message">"Points: "</string>
    <string name="life_message">"Life: "</string>
    <string name="level_1_title_text"><u>Level 1</u></string>
    <string name="level_2_title_text"><u>Level 2</u></string>
    <string name="level_3_title_text"><u>Level 3</u></string>
    <string name="level_1_instructions_text">Drag the element from the bank to it\'s correct location on the periodic table</string>
    <string name="level_2_instructions_text">Select the correct group that belongs to each element</string>
    <string name="level_3_instructions_text">Place the correct element name to it\'s symbol on the periodic table</string>
    <string name="level_1_gif">Level 1 gif</string>
    <string name="level_2_gif">Level 2 gif</string>
    <string name="level_3_gif">Level 3 gif</string>
    <string name="name_insert_dialog_name_hint">name</string>
    <string name="name_insert_dialog_continue_button">Continue</string>
    <string name="name_insert_dialog_name_title">Insert you name</string>
</resources>