<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_svb">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/level_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_1_title_text"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/instructions_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:text="@string/level_1_instructions_text"
            app:layout_constraintTop_toBottomOf="@id/level_1_title"/>

        <ImageView
            android:id="@+id/instructions_gif_1"
            android:foreground="@drawable/black_stroke_background_2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/level_1_instruction"
            android:scaleType="center"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/instructions_text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/level_1_gif" />

        <TextView
            android:id="@+id/level_2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_2_title_text"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/instructions_gif_1"/>

        <TextView
            android:id="@+id/instructions_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:text="@string/level_2_instructions_text"
            app:layout_constraintTop_toBottomOf="@id/level_2_title"/>

        <ImageView
            android:id="@+id/instructions_gif_2"
            android:foreground="@drawable/black_stroke_background_2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/level_2_instruction"
            android:scaleType="center"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/instructions_text_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/level_2_gif" />

        <TextView
            android:id="@+id/level_3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_3_title_text"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/instructions_gif_2"/>

        <TextView
            android:id="@+id/instructions_gif_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:text="@string/level_3_instructions_text"
            app:layout_constraintTop_toBottomOf="@id/level_3_title"/>

        <ImageView
            android:id="@+id/imageView3"
            android:foreground="@drawable/black_stroke_background_2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/level_3_instruction"
            android:scaleType="center"
            app:layout_constraintTop_toBottomOf="@id/instructions_gif_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/level_3_gif" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>